[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "as3lib-miniAMF"
version = "1.0"
authors = [{name = "ajdelguidice", email = "ajdelguidice@gmail.com"}]
description = "A fork of Mini-AMF using up to date dependencies."
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
keywords = ["amf", "amf0", "amf3", "actionscript", "air", "flash", "flashplayer", "bytearray", "recordset", "decoder", "encoder", "sharedobject", "lso", "sol"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Utilities"
]
requires-python = ">=3.7"
dependencies = [
    "setuptools",
    "difusedxml",
    "cython"
]
packages=["miniamf", "miniamf._accel", "miniamf.adapters", "miniamf.util"]

[project.urls]
Homepage = "https://github.com/ajdelguidice/as3lib-miniAMF"

[pyproject.optional-dependencies]
docs = ["sphinx >= 1.5"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py{27,34,35,36}-cy{y,n}
    toxworkdir = {env:TOX_WORK_DIR:.tox}
    skip_missing_interpreters = True

    [testenv]
    passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH

    basepython =
        py27: python2.7
        py34: python3.4
        py35: python3.5
        py36: python3.6

    deps =
        coverage
        coveralls
        flake8
        cyy: Cython

    commands =
        flake8
        coverage run --source=miniamf setup.py test
        - coveralls
"""
