[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "as3lib-miniAMF"
version = "1.0"
authors = [{name = "ajdelguidice", email = "ajdelguidice@gmail.com"}]
description = "A fork of Mini-AMF using up to date dependencies."
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["amf", "amf0", "amf3", "actionscript", "air", "flash", "flashplayer", "bytearray", "recordset", "decoder", "encoder", "sharedobject", "lso", "sol"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Utilities"
]
requires-python = ">=3.7"
dependencies = [
    "setuptools",
    "difusedxml",
    "cython"
]

[project.urls]
Homepage = "https://github.com/ajdelguidice/as3lib-miniAMF"

[pyproject.optional-dependencies]
docs = ["sphinx >= 1.5"]

[tool.setuptools]
packages=["miniamf", "miniamf._accel", "miniamf.adapters", "miniamf.util"]
#ext-modules = [
#    {name = "miniamf._accel.util", sources = ["miniamf/_accel/util.pyx"]},
#    {name = "miniamf._accel.codec", sources = ["miniamf/_accel/codec.pyx"]},
#    {name = "miniamf._accel.amf0", sources = ["miniamf/_accel/amf0.pyx"]},
#    {name = "miniamf._accel.amf3", sources = ["miniamf/_accel/amf3.pyx"]}
#]

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py{37,38,39,310}-cy{y,n}
    toxworkdir = {env:TOX_WORK_DIR:.tox}
    skip_missing_interpreters = True

    [testenv]
    passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH

    basepython =
        py37: python3.7
        py38: python3.8
        py39: python3.9
        py310: python3.10

    deps =
        coverage
        coveralls
        flake8
        cyy: Cython

    commands =
        flake8
        coverage run --source=miniamf setup.py test
        - coveralls
"""
