[build-system]
requires = ["setuptools", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "as3lib-miniAMF"
version = "1.0"
authors = [{name = "ajdelguidice", email = "ajdelguidice@gmail.com"}]
description = "A fork of Mini-AMF using up to date dependencies."
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["amf", "amf0", "amf3", "actionscript", "air", "flash", "flashplayer", "bytearray", "recordset", "decoder", "encoder", "sharedobject", "lso", "sol"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Topic :: Utilities"
]
requires-python = ">=3.7"
dependencies = [
    "setuptools",
    "defusedxml",
    "cython"
]

[project.urls]
Homepage = "https://github.com/ajdelguidice/as3lib-miniAMF"

[pyproject.optional-dependencies]
docs = ["sphinx >= 1.5"]

[tool.setuptools]
packages=["miniamf", "miniamf._accel", "miniamf.adapters", "miniamf.util"]
ext-modules = [
    {name = "miniamf._accel.util", sources = ["miniamf/_accel/util.pyx"]},
    {name = "miniamf._accel.codec", sources = ["miniamf/_accel/codec.pyx"]},
    {name = "miniamf._accel.amf3", sources = ["miniamf/_accel/amf3.pyx"]},
    {name = "miniamf._accel.amf0", sources = ["miniamf/_accel/amf0.pyx"]}
]

[tool.tox]
requires = ["tox"]
env_list = ["py37","py38","py39","py310","py3"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
runner = "uv-venv-runner"
deps = ["flake8","cython","defusedxml"]
commands = [["-","flake8"],["python","-m","unittest","discover","miniamf/tests"]]

[tool.tox.env.py37]
base_python = "python3.7"

[tool.tox.env.py38]
base_python = "python3.8"

[tool.tox.env.py39]
base_python = "python3.9"

[tool.tox.env.py310]
base_python = "python3.10"
